edit description meta data

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="manage your manage your political members data"
+      content="manage your supporters and political members data"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!-- Latest compiled and minified CSS -->
